Fixed up header on mobile, add in find reps link

--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -66,6 +66,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex; 
     flex-direction: row;
+    overflow-y: visible;
 }
 
 .button{
